--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <section id="daylight"></section>
-  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+  <script type="text/javascript">window.daylightUserData = `${user}`</script>
+  <script type="text/javascript" src="/bundle.js" charset="utf-8"></script>
 </body>
 </html>
