--- a/front/index.html
+++ b/front/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <section id="daylight"></section>
+  <section id="app"></section>
   <script type="text/javascript">window.daylightUserData = `${user}`</script>
   <script type="text/javascript" src="/bundle.js" charset="utf-8"></script>
 </body>
